# image_processing

./: CMakeLists.txt  README.md  build.sh  run_main.sh
conf/: conf.csv
include/: image_attributes.h  process_paths.h
src/: image_attributes.cpp  main.cpp  process_paths.cpp
